fix patch working exp
